--- a/WS12/styles/yhteystiedot.css
+++ b/WS12/styles/yhteystiedot.css
@@ -1,25 +1,36 @@
+/* Yleiset tyylit headerille ja footerille */
 header, footer {
     background-color: blue;
     color: white;
     text-align: center;
+    opacity: 0.8; 
+    margin: 0;
 }
 
+h1 {
+    font-family: cursive;
+}
+
+/* Erityistyylit footerille */
 footer {
     padding: 10px;
-    margin: 0;
+    bottom: 0;
 }
 
+/* Erityistyylit headerille */
 header {
     padding: 20px;
-    margin: 0;
+    top: 0;
 }
 
+/* Navigoinnin tyylit */
 nav {
     background-color: blue;
     padding: 10px;
     font-size: 20px;
 }
 
+/* Wrapperin tyylit */
 .wrapper {
     display: flex;
     justify-content: center;
@@ -30,6 +41,7 @@ nav {
     padding: 0 20px;
 }
 
+/* Linkkien tyylit */
 a {
     color: white;
     text-decoration: none;
@@ -39,26 +51,19 @@ a:hover, a:focus {
     color: black;
 }
 
-button {
-    background-color: white;
-    color: blue;
-    border: none;
-    padding: 5px 10px;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
+/* Kirjaudu-painikkeen sijoittelu */
 #kirjaudu {
     position: absolute;
     top: 10px;
     right: 10px;
 }
 
+/* Registöidy-painikkeen sijoittelu */
 #koelaulu {
     position: relative;  
 }
 
+/* Tausta tyylit */
 body {
     background-color:  #f5f5dc;
     background-size: cover;
@@ -73,6 +78,7 @@ body {
     box-sizing: border-box;
 }
 
+/* Sisällön tyylit */
 section {
     padding: 20px;
     margin: 20px;
@@ -82,6 +88,7 @@ section {
     text-align: center;
 }
 
+/* Email-linkin tyylit */
 #email-link {
     color: blue;
 }
